style: 优化 TestAllCommand 代码格式
- 移除未使用的 GREEN 常量
- 简化流操作，使用 toList() 替代 collect(Collectors.toList())